[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/ActionButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Fonts/Montserrat-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/InputInfo.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Sprites/Items/bomb.svg" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/trader.svg" type="Texture" id=5]
[ext_resource path="res://Scripts/Actions/BuyActionButton.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Trader.gd" type="Script" id=7]
[ext_resource path="res://Assets/Sprites/door.svg" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/exit.svg" type="Texture" id=9]
[ext_resource path="res://Assets/Music&sFX/purchase_item.wav" type="AudioStream" id=10]
[ext_resource path="res://Assets/Music&sFX/description_changed.wav" type="AudioStream" id=11]

[sub_resource type="DynamicFont" id=1]
size = 8
use_filter = true
font_data = ExtResource( 2 )

[node name="Trader" type="Node2D"]
position = Vector2( 0, -8 )
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.16, 0.16 )
texture = ExtResource( 5 )

[node name="Exit" type="TextureButton" parent="Sprite"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -336.0
margin_top = -256.0
margin_right = -256.0
margin_bottom = -176.0
rect_min_size = Vector2( 80, 80 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="."]
margin_left = -39.0
margin_top = 16.0
margin_right = 41.0
margin_bottom = 51.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buy1" type="VBoxContainer" parent="HBox"]
margin_right = 23.0
margin_bottom = 35.0
custom_constants/separation = 0

[node name="Button" parent="HBox/Buy1" instance=ExtResource( 1 )]
margin_right = 23.0
margin_bottom = 24.0
icon = ExtResource( 4 )
expand_icon = true
script = ExtResource( 6 )
items = [ "crown", "bomb", "crystal", "flame", "ring", "poison", "rupee", "potion", "key" ]

[node name="InputInfo" parent="HBox/Buy1/Button" instance=ExtResource( 3 )]
margin_left = 40.0
margin_top = -21.0
margin_right = 40.0
margin_bottom = -21.0

[node name="Label" type="Label" parent="HBox/Buy1/Button"]
margin_top = 24.0
margin_right = 23.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 1 )
text = "2"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buy2" type="VBoxContainer" parent="HBox"]
margin_left = 27.0
margin_right = 50.0
margin_bottom = 35.0
custom_constants/separation = 0

[node name="Button" parent="HBox/Buy2" instance=ExtResource( 1 )]
margin_right = 23.0
margin_bottom = 24.0
icon = ExtResource( 4 )
expand_icon = true
script = ExtResource( 6 )
items = [ "crown", "bomb", "crystal", "flame", "ring", "poison", "rupee", "potion" ]

[node name="InputInfo" parent="HBox/Buy2/Button" instance=ExtResource( 3 )]
margin_left = 40.0
margin_top = -21.0
margin_right = 40.0
margin_bottom = -21.0

[node name="Label" type="Label" parent="HBox/Buy2/Button"]
margin_top = 24.0
margin_right = 23.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 1 )
text = "2"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buy3" type="VBoxContainer" parent="HBox"]
margin_left = 54.0
margin_right = 77.0
margin_bottom = 35.0
custom_constants/separation = 0

[node name="Button" parent="HBox/Buy3" instance=ExtResource( 1 )]
margin_right = 23.0
margin_bottom = 24.0
icon = ExtResource( 4 )
expand_icon = true
script = ExtResource( 6 )
items = [ "crown", "bomb", "crystal", "flame", "ring", "poison", "rupee", "potion" ]

[node name="InputInfo" parent="HBox/Buy3/Button" instance=ExtResource( 3 )]
margin_left = 40.0
margin_top = -21.0
margin_right = 40.0
margin_bottom = -21.0

[node name="Label" type="Label" parent="HBox/Buy3/Button"]
margin_top = 24.0
margin_right = 23.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 1 )
text = "2"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio" type="Node" parent="."]

[node name="Purchase" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 10 )
bus = "Sounds"

[node name="Exit" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 11 )
bus = "Sounds"

[connection signal="pressed" from="Sprite/Exit" to="." method="_on_Exit_pressed"]
[connection signal="description_changed" from="HBox/Buy1/Button" to="." method="_on_Button_description_changed"]
[connection signal="item_bought" from="HBox/Buy1/Button" to="." method="_on_Button_item_bought"]
[connection signal="description_changed" from="HBox/Buy2/Button" to="." method="_on_Button_description_changed"]
[connection signal="item_bought" from="HBox/Buy2/Button" to="." method="_on_Button_item_bought"]
[connection signal="description_changed" from="HBox/Buy3/Button" to="." method="_on_Button_description_changed"]
[connection signal="item_bought" from="HBox/Buy3/Button" to="." method="_on_Button_item_bought"]
